infra/fluxcd/eck-stack/ingress-es.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-natron-cloud
    cert-manager.io/private-key-rotation-policy: Always
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
spec:
  ingressClassName: nginx-external
  rules:
  - host: es.360.natron.cloud
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: elasticsearch-es-http
              port:
                number: 9200
  tls:
  - hosts:
      - "es.360.natron.cloud"
    secretName: tls-es-360-natron-cloud
