infra/fluxcd/eck-stack/ingress-kibana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-natron-cloud
    cert-manager.io/private-key-rotation-policy: Always
spec:
  ingressClassName: nginx-external
  rules:
  - host: kibana.360.natron.cloud
    http:
      paths:
      - backend:
          service:
            name: kibana-kb-http
            port:
              number: 5601
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - kibana.360.natron.cloud
    secretName: tls-kibana-360-natron-cloud
